fixed shadow Header component, fixed TopCompanies component spacing

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -32,6 +32,9 @@
 
 .header > div:nth-of-type(2) {
   display: none;
+  box-shadow: none;
+  transition: display 250ms cubic-bezier(0.4, 0, 0.6, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
 }
 
 .header > .scrolling {
@@ -45,7 +48,7 @@
   height: 2.4rem;
   border-radius: 50%;
   margin: auto;
-  box-shadow: rgb(145, 158, 171) -23px 16px 56px -8px;
+  box-shadow: rgb(145, 158, 171) -23px 16px 56px -8px !important;
 }
 
 .header > div:first-of-type > div {
